--- a/style.css
+++ b/style.css
@@ -386,38 +386,36 @@ html {
 }
 
 /* CONTACT FORM */
-
-input[type="text"],
-input[type="email"],
-select,
-textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
+.goconpage {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
 }
 
-input[type="submit"] {
-  background-color: #f3c745;
+.goconpage a {
+  background-color: #04aa6d;
   color: white;
   padding: 12px 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
 }
-
-input[type="submit"]:hover {
-  background-color: #f3c745;
+.goconpage button:hover {
+  color: orange;
 }
-
-.container {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
+.goconpage button {
+  background-color: #04aa6d;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.goconpage a {
+  text-decoration: none;
+  color: white;
 }
 
 /* FOOTER */
